--- a/incAccounting/web/soap/Menu.html
+++ b/incAccounting/web/soap/Menu.html
@@ -1,3 +1,5 @@
+
+		<!-- Menu.html -->
 		<div id="divMenu">
 			<div id="divMenuBar">
 				<img src="images/triplebar.svg" id="imgMenuIcon" />
@@ -5,74 +7,77 @@
 			</div>
 			<div id="divMenuOptions">
 
-				<h1>Actions</h1>
+				<h1>System</h1>
 				<a href="Copyright.html">Splash Screen</a><br/>
 				<a href="Login.html">User Login</a><br/>	
 				<a href="Setup.html">Database Setup</a><br/>
 				<a href="ChangePassword.html">Change Password</a><br/>	
-
-				<h1>Security</h1>
 				<a href="UserList.html">Users</a><br/>	
-				<a href="ReportView.shtml?GUID=290198ebc76e43cbb7be15de3e3d0ad7">Groups</a><br/>	
-				<a href="ReportView.shtml?GUID=bdcddb7c80a34302a83a23ac1ed5d309">Securables</a><br/>	
-				<a href="ReportView.shtml?GUID=c545d2f279be49e9a471a43033d01c7f">Settings</a><br/>	
-				<a href="ReportView.shtml?GUID=767a1911c68b4878a2ffc8dfd6974bc5">Logs</a><br/>	
-				<a href="ReportView.shtml?GUID=75ecee50436c4a7d8095b30f794f87f9">Reports</a><br/>	
-
-				<h1>Reporting</h1>
+				<a href="GroupList.html">Groups</a><br/>	
+				<a href="SecurableList.html">Securables</a><br/>	
+				<a href="SettingList.html">Settings</a><br/>	
+				<a href="LogList.html">Logs</a><br/>	
+				<a href="ReportList.html">Reports</a><br/>
+				<br />
 				<a href="ReportView.shtml?GUID=cef027b31c704b17b9f97bc9489626cb">Group Membership</a><br/>	
+
+				<h1>Lists</h1>
+				<a href="AccountList.html">Accounts</a><br/>	
+				<a href="ContactTypeList.html">Contact Types</a><br/>	
+				<a href="ContactList.html">Contacts</a><br/>	
+				<a href="DepartmentList.html">Departments</a><br/>	
+				<a href="ItemList.html">Items</a><br/>	
+				<a href="JobList.html">Jobs</a><br/>
+				<a href="SalesTaxAuthorityList.html">Sales Tax Authorities</a><br/>	
+				<a href="SalesTaxGroupList.html">Sales Tax Groups</a><br/>	
+				<a href="UserMeasureList.html">Unit Measures</a><br/>
+				<a href="DocumentTypeist.html">Document Types</a><br/>	
+				<a href="PaymentTypeList.html">Payment Types</a><br/>	
+
+				<h1>Accounting</h1>			
+				<a href="TransactionList.html">Transactions</a><br/>	
+				<a href="DepositList.html">Deposits</a><br/>	
+				<a href="ReconciliationList.html">Reconciliations</a><br/>
+				<a href="AccountRegister.shtml">Account Register</a><br/>
+				<br />
 				<a href="ReportView.shtml?GUID=6d4ea7d4624e48509e915e019ca1f7a9">Trial Balance</a><br/>	
 				<a href="ReportView.shtml?GUID=a817ee365045448fb67c75db9b586ec8">Out of Balance</a><br/>	
 				<a href="ReportView.shtml?GUID=ee4f00312ff44e3d941c6a3445bf93b0">Account Ledger</a><br/>	
 				<a href="ReportView.shtml?GUID=f6c1313616f24bcd827863490e2a661b">Profit or Loss</a><br/>	
 				<a href="ReportView.shtml?GUID=ea6fdeb8d76247aa876dcab709b5de6e">Net Worth</a><br/>	
-				<a href="ReportView.shtml?GUID=08f4949be17a4d90a6a3a75b05b17fdf">Aged Payables</a><br/>	
+
+				<h1>Sales</h1>			
+				<a href="SalesQuoteList.html">Sales Quotes</a><br/> 
+				<a href="SalesOrderList.html">Sales Orders</a><br/> 
+				<a href="SalesInvoiceList.html">Sales Invoices</a><br/> 
+				<a href="SalesCreditMemoList.html">Sales Credit Memos</a><br/> 
+				<a href="SalesPaymentList.html">Sales Payments</a><br/>	
+				<br />
 				<a href="ReportView.shtml?GUID=b88b0031fc2844eb874c5be27f8be003">Aged Receivables</a><br/>	
 				<a href="ReportView.shtml?GUID=01f2dff753214482b4a1ac02f6640914">Sales Tax Accural</a><br/>	
 				<a href="ReportView.shtml?GUID=f64ba5f5752a4473a5946fe68ddde21f">Sales Tax Cash</a><br/>	
-				<a href="ReportView.shtml?GUID=490b638915b74aecb816c888dea125e9">Payroll History</a><br/>
-				<a href="ReportView.shtml?GUID=ea6fdeb8d76247aa876dcab709b5de6e">Inventory Valuation</a><br/>
 
-				<h1>Lists</h1>
-				<a href="ReportView.shtml?GUID=06db3e1b55e54bc2babf0424e0843d5b">Accounts</a><br/>	
-				<a href="ReportView.shtml?GUID=ed6c823f890a470fa23b637dae910117">Contact Types</a><br/>	
-				<a href="ReportView.shtml?GUID=57808ea5bb1948d8a1ddce32a3233e10">Contacts</a><br/>	
-				<a href="ReportView.shtml?GUID=1b739cb0b80649589760652098d0ff9c">Departments</a><br/>	
-				<a href="ReportView.shtml?GUID=c30ad5f313f44d15b9d5a75dcc7200ad">Items</a><br/>	
-				<a href="ReportView.shtml?GUID=d638b37131514266a0fa8df8dc0b39a6">Jobs</a><br/>
-				<a href="ReportView.shtml?GUID=766ef959263043c79244f932e49ff61d">Sales Tax Authorities</a><br/>	
-				<a href="ReportView.shtml?GUID=6552470b48204c06b7a23271b472b6b7">Sales Tax Groups</a><br/>	
-				<a href="ReportView.shtml?GUID=88898672973041059e47961735e0c047">Unit Measures</a><br/>
-				<a href="ReportView.shtml?GUID=92ecd1b71cf24a9b82538fcd9b1bf136">Document Types</a><br/>	
-				<a href="ReportView.shtml?GUID=fcb89d0333e4418f829803e34887edb7">Payment Types</a><br/>	
-
-				<h1>Accounting</h1>			
-				<a href="ReportView.shtml?GUID=a92a85f5192e4dbb80cba3a67ad31448">Transactions</a><br/>	
-				<a href="ReportView.shtml?GUID=84c704545c9140fb96ee5b9610fe632b">Deposits</a><br/>	
-				<a href="ReportView.shtml?GUID=7788774678b84145b3681511b0cc9d40">Reconciliations</a><br/>
-				<a href="RegisterEntries.shtml">Account Register</a><br/>
-
-				<h1>Sales</h1>			
-				<a href="ReportView.shtml?GUID=078c5cd40a024563bfde3641352d4e43">Sales Quotes</a><br/> 
-				<a href="ReportView.shtml?GUID=97c04a5ce5024ad4b2859908da8f6e1a">Sales Orders</a><br/> 
-				<a href="ReportView.shtml?GUID=352f588dfcd147fda29b8b4cdc2fcdfc">Sales Invoices</a><br/> 
-				<a href="ReportView.shtml?GUID=3293e7a3b08744c38975accc635d7573">Sales Credit Memos</a><br/> 
-				<a href="ReportView.shtml?GUID=b8f0ac2f50ba4d40b227c841846dee15">Sales Payments</a><br/>	
 
 				<h1>Purchasing</h1>			
-				<a href="ReportView.shtml?GUID=cefd88dd219a4b6f8bc6dd30fd77f058">Purchase Quotes</a><br/> 
-				<a href="ReportView.shtml?GUID=7f8c6d9d299049779046ad7eb70884fa">Purchase Orders</a><br/> 
-				<a href="ReportView.shtml?GUID=2fc5847e6eba4c5784ce3258bd5b8f53">Purchase Invoices</a><br/> 
-				<a href="ReportView.shtml?GUID=30357e5cfb164c29a741e77f3de1cce7">Purchase Credit Memos</a><br/> 
-				<a href="ReportView.shtml?GUID=b48f778f1bbf4b87b7e37c97324d9b48">Purchase Payments</a><br/>
+				<a href="PurchaseQuoteList.html">Purchase Quotes</a><br/> 
+				<a href="PurchaseOrderList.html">Purchase Orders</a><br/> 
+				<a href="PurchaseInvoiceList.html">Purchase Invoices</a><br/> 
+				<a href="PurchaseCreditMemoList.html">Purchase Credit Memos</a><br/> 
+				<a href="PurchasePaymentList.html">Purchase Payments</a><br/>
+				<br />
+				<a href="ReportView.shtml?GUID=08f4949be17a4d90a6a3a75b05b17fdf">Aged Payables</a><br/>	
+				<a href="ReportView.shtml?GUID=ea6fdeb8d76247aa876dcab709b5de6e">Inventory Valuation</a><br/>
 
 				<h1>Employees</h1>
-				<a href="ReportView.shtml?GUID=a64f1e848b4b4b009f669e133d201478">Employees</a><br/>	
-				<a href="ReportView.shtml?GUID=a7d53239fa82450db2e9d07594e7cce9">Payroll Fields</a><br/>
-				<a href="ReportView.shtml?GUID=a51f368f999a4ebdb900a1e1cfac9ebb">Time Entry Types</a><br/>	
-				<a href="ReportView.shtml?GUID=8fdb0c8bbfb84ead88aed2ee3674b498">Time Entry</a><br/>	
-				<a href="ReportView.shtml?GUID=8e32580ad6aa45d592e4182876a0a23a">Time Sheets</a><br/>	
-				<a href="ReportView.shtml?GUID=6eeab128b44446b6b67556f7418298ba">Payroll Checks</a><br/>	
+				<a href="EmployeeList.html">Employees</a><br/>	
+				<a href="PayrollFieldList.html">Payroll Fields</a><br/>
+				<a href="TimeEntryTypeList.html">Time Entry Types</a><br/>	
+				<a href="TimeEntryList.html">Time Entry</a><br/>	
+				<a href="TimeSheetList.html">Time Sheets</a><br/>	
+				<a href="PayrollCheckList.html">Payroll Checks</a><br/>	
+				<br />
+				<a href="ReportView.shtml?GUID=490b638915b74aecb816c888dea125e9">Payroll History</a><br/>
+
 
 				<h1>Posting</h1>			
 				<a href="PostDocuments.html">Post Documents</a><br/>	
@@ -81,3 +86,6 @@
 				<a href="PostPayrollChecks.html">Post Payroll Checks</a><br/>													
 			</div>
 		</div>
+		<!-- / Menu.html -->
+
+		
