--- a/incAccounting/web/soap/Copyright.html
+++ b/incAccounting/web/soap/Copyright.html
@@ -2,14 +2,9 @@
 <html>
 	<head>
 		<title>incAccounting - Copyright</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<script src="node_modules/jquery/dist/jquery.min.js"></script>
-		<script src="node_modules/jquery.soap/jquery.soap.js"></script>
-		<script src="scripts/incAccounting.js"></script>
 		<script src="scripts/CopyrightController.js"></script>
-		<script src="scripts/MenuController.js"></script>
-		<link href="css/incAccounting.css" rel="stylesheet" type="text/css" />
+
+		<!--#include virtual="Header.html"-->
 	</head>
 	<body>
 
