--- a/incAccounting/web/soap/UserEdit.html
+++ b/incAccounting/web/soap/UserEdit.html
@@ -2,21 +2,15 @@
 <html>
 	<head>
 		<title>incAccounting - User Edit</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<script src="node_modules/jquery/dist/jquery.min.js"></script>
-		<script src="node_modules/jquery.soap/jquery.soap.js"></script>
 		<script src="scripts/UserEditController.js"></script>
-		<script src="scripts/MenuController.js"></script>
-		<script src="scripts/incAccounting.js"></script>
-		<link href="css/incAccounting.css" rel="stylesheet" type="text/css" />
+
+		<!--#include virtual="Header.html"-->
 	</head>
 	<body>
 
 		<!--#include virtual="Menu.html"-->
 		
 		<div id="divContent">
-			<div id="divError"></div>
 		</div>
 	</body>
 </html>
