--- a/incAccounting/web/soap/Copyright.html
+++ b/incAccounting/web/soap/Copyright.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>incAccounting - Copyright</title>
-		<script src="scripts/CopyrightController.js"></script>
+		<script src="scripts/inc.accounting.html.CopyrightController.js"></script>
 
 		<!--#include virtual="Header.html"-->
 	</head>
