--- a/incAccounting/web/soap/Login.html
+++ b/incAccounting/web/soap/Login.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>incAccounting - Login</title>
-		<script src="scripts/LoginController.js"></script>
+		<script src="scripts/inc.accounting.html.LoginController.js"></script>
 
 		<!--#include virtual="Header.html"-->
 	</head>
