--- a/incAccounting/web/soap/Header.html
+++ b/incAccounting/web/soap/Header.html
@@ -1,10 +1,19 @@
 
 		<!-- Head.html -->
+
+		<title>incAccounting</title>		
+		
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script src="scripts/jquery/dist/jquery.min.js"></script>
-		<script src="scripts/jquery.soap/jquery.soap.js"></script>
-		<script src="scripts/incAccounting.js"></script>
-		<script src="scripts/MenuController.js"></script>		
+
+		<!-- order is specific for the INC libraries -->
+		<script src="scripts/inc.html.js"></script>
+		<script src="scripts/inc.data.js"></script>
+		<script src="scripts/inc.accounting.js"></script>
+		<script src="scripts/inc.accounting.data.js"></script>
+		<script src="scripts/inc.accounting.entities.js"></script>
+		<script src="scripts/inc.accounting.html.MenuController.js"></script>		
 		<link href="css/incAccounting.css" rel="stylesheet" type="text/css" />
+
 		<!-- / Head.html -->
