--- a/incAccounting/web/soap/UserEdit.html
+++ b/incAccounting/web/soap/UserEdit.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>incAccounting - User Edit</title>
-		<script src="scripts/UserEditController.js"></script>
+		<script src="scripts/inc.accounting.html.UserEditController.js"></script>
 
 		<!--#include virtual="Header.html"-->
 	</head>
