Base SOAP service to handle deseriaizing hetrogenous maps. User.save() working. CSS / Styles for screns less than 640 wide (320 width). IE Compatibility. User edit: GUID is RO. List table with columns names as label in each cell for mobile layouts. User.Initialize() working. UserEdit working - need password reset. UserList working - need delete user and add user. inc.data.Map usedfor serializing JS objects to XML. Added polyfill Number.isInteger and Number.isFinite for IE. Date type detection using RegEx and ISO format. Timezone handling consistent. JS object toXML serialization. SOAP packaging. Date parsing in inc.Date.parse. Throw error rather than alert. MySQL adapter name changes. MySQL statement handling of booleans. SQL type to Java type mappings. Type parsing.

--- a/incAccounting/web/soap/UserEdit.html
+++ b/incAccounting/web/soap/UserEdit.html
@@ -13,8 +13,9 @@
 
 			<h1>User Edit</h1>
 			
-			<label for="txtGUID">GUID:</label><input id="txtGUID" /><br />
+			<label for="txtGUID">GUID:</label><input id="txtGUID" readonly /><br />
 			<label for="chkIsAllowed">Allowed:</label><input type="checkbox" id="chkIsAllowed"><br />
+			<label for="txtDisplayName">Display Name:</label><input type="text" id="txtDisplayName" /><br />
 			<label for="txtEmailAddress">Email Address:</label><input type="email" id="txtEmailAddress" /><br />
 			<label for="txtPasswordDate">Password Date:</label><input type="date" id="txtPasswordDate" /><br />
 			<br />	
