--- a/incAccounting/web/soap/Copyright.html
+++ b/incAccounting/web/soap/Copyright.html
@@ -10,7 +10,7 @@
 		<!--#include virtual="Menu.html"-->
 
 		<div id="divContent">
-			<h1>incAcccounting</h1>
+			<h1>License Agreement</h1>
 			<p>Copyright (C) 2016 Internetwork Consulting LLC</p>
 			<p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, version 3 of the License.</p>
 			<p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</p>
