--- a/incAccounting/web/soap/Header.html
+++ b/incAccounting/web/soap/Header.html
@@ -9,9 +9,7 @@
 		<script src="scripts/jquery/dist/jquery.min.js"></script>
 
 		<!-- order is specific for the INC libraries -->
-		<script src="scripts/inc.html.js"></script>
-		<script src="scripts/inc.data.js"></script>
-		<script src="scripts/inc.accounting.js"></script>
+		<script src="scripts/inc.js"></script>
 		<script src="scripts/inc.accounting.data.js"></script>
 		<script src="scripts/inc.accounting.entities.js"></script>
 		<script src="scripts/inc.accounting.html.MenuController.js"></script>		
