Impliment as web service and associated web pages for front end.

--- a/incAccounting/web/soap/GroupEdit.html
+++ b/incAccounting/web/soap/GroupEdit.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="scripts/inc.accounting.html.UserEditController.js"></script>
+		<script src="scripts/inc.accounting.data/GroupsRow.js"></script>
+		<script src="scripts/inc.accounting.business/Group.js"></script>
+		<script src="scripts/inc.accounting.html/GroupEdit.js"></script>
 
 		<!--#include virtual="Header.html"-->
 	</head>
@@ -11,25 +13,15 @@
 		
 		<div id="divContent">
 
-			<h1>User Edit</h1>
+			<h1>Group Edit</h1>
 			
 			<label for="txtGUID">GUID:</label><input id="txtGUID" readonly /><br />
 			<label for="chkIsAllowed">Allowed:</label><input type="checkbox" id="chkIsAllowed"><br />
 			<label for="txtDisplayName">Display Name:</label><input type="text" id="txtDisplayName" /><br />
-			<label for="txtEmailAddress">Email Address:</label><input type="email" id="txtEmailAddress" /><br />
-			<label for="txtPasswordDate">Password Date:</label><input type="date" id="txtPasswordDate" /><br />
+			<label for="txtEmailAddress">Email Address:</label><input type="text" id="txtEmailAddress" /><br />
 			<br />	
 			<button id="btnSave">Save</button>
-			
-			
-			<h2>Reset Password</h2>
-			<p><i>Only the 'administrator' user can reset a password!</i> If you would like to reset / recreate the user, please enter the desired password.  If welcome is in the password, the user will be required to change their password.</p>
-			
-			<label>Password:</label><input type="password" id="txtPassword" /><br />
-			<label>Confirm:</label><input type="password" id="txtConfirm" /><br />	
-			<br />	
-			<button id="btnReset">Reset</button>
-			
+
 		</div>
 	</body>
 </html>
