--- a/incAccounting/web/soap/Header.html
+++ b/incAccounting/web/soap/Header.html
@@ -10,9 +10,7 @@
 
 		<!-- order is specific for the INC libraries -->
 		<script src="scripts/inc.js"></script>
-		<script src="scripts/inc.accounting.data.js"></script>
-		<script src="scripts/inc.accounting.entities.js"></script>
-		<script src="scripts/inc.accounting.html.MenuController.js"></script>		
+		<script src="scripts/inc.accounting.html/Menu.js"></script>		
 		<link href="css/incAccounting.css" rel="stylesheet" type="text/css" />
 
 		<!-- / Head.html -->
