--- a/incAccounting/web/soap/UserList.html
+++ b/incAccounting/web/soap/UserList.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="scripts/inc.accounting.html.UserListController.js"></script>
+		<script src="scripts/inc.accounting.data/UsersRow.js"></script>
+		<script src="scripts/inc.accounting.business/User.js"></script>
+		<script src="scripts/inc.accounting.html/UserList.js"></script>
 
 		<!--#include virtual="Header.html"-->
 	</head>
