--- a/incAccounting.WS/web/ListList.html
+++ b/incAccounting.WS/web/ListList.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script src="scripts/inc.accounting.data/ListsRow.js"></script>
-		<script src="scripts/inc.accounting.business/List.js"></script>
+		<script src="scripts/inc.accounting.business/ListEntity.js"></script>
 		<script src="scripts/inc.accounting.html/ListList.js"></script>
 
 		<!--#include virtual="Header.html"-->
