--- a/incAccounting.WS/web/Login.html
+++ b/incAccounting.WS/web/Login.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script src="scripts/inc.accounting.data/UsersRow.js"></script>
-		<script src="scripts/inc.accounting.business/User.js"></script>
+		<script src="scripts/inc.accounting.business/UserEntity.js"></script>
 		<script src="scripts/inc.accounting.html/Login.js"></script>
 
 		<!--#include virtual="Header.html"-->
