--- a/incAccounting.WS/web/GroupEdit.html
+++ b/incAccounting.WS/web/GroupEdit.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script src="scripts/inc.accounting.data/GroupsRow.js"></script>
-		<script src="scripts/inc.accounting.business/Group.js"></script>
+		<script src="scripts/inc.accounting.business/GroupEntity.js"></script>
 		<script src="scripts/inc.accounting.html/GroupEdit.js"></script>
 
 		<!--#include virtual="Header.html"-->
