Adding "list" functionality.

--- a/incAccounting.WS/web/ListEdit.html
+++ b/incAccounting.WS/web/ListEdit.html
@@ -21,7 +21,10 @@
 			<h1>List Edit</h1>
 			
 			<label for="txtGUID">GUID:</label><input id="txtGUID" readonly /><br />
+			<label for="chkDelete">Delete:</label><input id="chkDelete" type="checkbox" /><br />			
 			<label for="txtDisplayName">Display Name:</label><input type="text" id="txtDisplayName" /><br />
+			<label for="txtAddUrl">Add URL:</label><input type="text" id="txtAddUrl" /><br />
+			<label for="txtEditUrl">Edit URL:</label><input type="text" id="txtEditUrl" /><br />
 			<label for="txtSqlQuery">SQL Query:</label><textarea id="txtSqlQuery"></textarea><br />
 			
 			<br />	
@@ -34,6 +37,7 @@
 			<div id="filters">
 				<div class="template">
 					<label for="txtFilterGUID_GUID_">GUID:</label><input id="txtFilterGUID_GUID_" readonly /><br />
+					<label for="txtFilterDelete_GUID_">Delete:</label><input id="txtFilterDelete_GUID_" type="checkbox" /><br />
 					<label for="txtFilterPrompt_GUID_">Prompt:</label><input id="txtFilterPrompt_GUID_" /><br />
 					<label for="selFilterDataType_GUID_">Data Type:</label><select id="selFilterDataType_GUID_">
 						<option value=""></option>
