--- a/incAccounting.WS/web/ListList.html
+++ b/incAccounting.WS/web/ListList.html
@@ -17,16 +17,14 @@
 			
 			<label for="txtDisplayName">Display Name:</label><input type="text" id="txtDisplayName"/><br />
 			<br />
-			<button id="btnSearch">Search</button> <button id="btnAdd">Add</button> <button id="btnDelete">Delete</button><br />
+			<button id="btnSearch">Search</button> <button id="btnAdd">Add</button><br />
 			<br />
 
 			<table class="tableList" id="tableList">
 				<tr>
-					<th></th>
 					<th>Name</th>
 				</tr>
 				<tr class="trTemplate">
-					<td class="tdDelete"><label class="th">Delete: &nbsp;</label><input type="checkbox" id="_GUID_" class="chkDelete" /></td>
 					<td class="tdName"><label class="th">Display Name: &nbsp;</label><a href="ListEdit.html?GUID=_GUID_">_DisplayName_</a></td>
 				</tr>
 			</table>
