--- a/incAccounting.WS/web/Login.html
+++ b/incAccounting.WS/web/Login.html
@@ -14,7 +14,7 @@
 		<div id="divContent">
 			<label for="txtEmailAddress">Email:</label><input type="text" id="txtEmailAddress"/><br />
 			<label for="txtPassword">Password:</label><input type="password" id="txtPassword"/><br />
-			<label for="txtDatabase">Company:</label><input type="text" id="txtDatabase"/><br />
+			<!--<label for="txtDatabase">Company:</label><input type="text" id="txtDatabase"/><br />-->
 			<br />
 			<button id="btnLogin">Login</button>
 		</div>
